# wasm_af

./: .gitattributes  .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  Makefile  README.md  go.mod  go.sum  orchestrator
.claude/: settings.local.json
.github/workflows/: ci.yml
cmd/webhook-gateway/: go.mod  main.go
components/: Cargo.toml
components/agent-types/: Cargo.toml
components/agent-types/src/: lib.rs
components/agents/email-read/: Cargo.toml
components/agents/email-read/src/: lib.rs
components/agents/email-send/: Cargo.toml
components/agents/email-send/src/: lib.rs
components/agents/file-ops/: Cargo.toml
components/agents/file-ops/src/: lib.rs
components/agents/memory/: Cargo.toml
components/agents/memory/src/: lib.rs
components/agents/responder/: Cargo.toml
components/agents/responder/src/: lib.rs
components/agents/router/: Cargo.toml
components/agents/router/src/: lib.rs
components/agents/sandbox-exec/: Cargo.toml
components/agents/sandbox-exec/src/: lib.rs
components/agents/shell/: Cargo.toml
components/agents/shell/src/: lib.rs
components/agents/summarizer/: Cargo.toml
components/agents/summarizer/src/: lib.rs
components/agents/summarizer/wit/: world.wit
components/agents/url-fetch/: Cargo.toml
components/agents/url-fetch/src/: lib.rs
components/agents/web-search/: Cargo.toml
components/agents/web-search/src/: lib.rs
components/agents/web-search/wit/: world.wit
components/policy-engine/: Cargo.toml
components/policy-engine/src/: lib.rs
components/policy-engine/wit/: world.wit
crates/dag/: Cargo.toml
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: api.rs  engine.rs  main.rs  policy.rs  registry.rs  scheduler.rs
crates/orchestrator/src/host/: mod.rs
crates/taskstate/: Cargo.toml
crates/taskstate/src/: store.rs  types.rs
deploy/: setup.sh  wadm-local.yaml  wadm.yaml
deploy/policies/: default.json
deploy/test/: negative_tests.sh
docs/: architecture.md  creating-an-agent.md  local-dev.md  script.md  writing-agents.md
examples/fan-out-summarizer/: README.md  agents.json  data.json  policies.json  policy.rego  policy_test.rego  run.sh  submit_test.rego
examples/pii-pipeline/: Makefile  README.md  agents.json  data.json  policy.rego  policy_test.rego  run.sh  sample-doc.html  submit_test.rego
examples/prompt-injection/: Makefile  README.md  agents.json  data.json  malicious_page.html  policies.json  policy.rego  policy_test.rego  run.sh  submit.rego  submit_test.rego
examples/wasmclaw/: Makefile  README.md  agents.json  data.json  email-reply-sequence.md  jailbreak.rego  jailbreak_test.rego  policy.rego  policy_test.rego  reply-all-demo.sh  run.sh  submit.rego  submit_test.rego  taint-demo.sh
hooks/: pre-commit
pkg/controlplane/: client.go  types.go
pkg/dag/: dag.go  dag_test.go
pkg/taskstate/: store.go  store_test.go  types.go
policies/: byoa.rego
provider/llm-inference/: main.go  router.go
provider/orchestrator/: approval.go  approval_test.go  builder_chat.go  byoa.go  (+21 more)
runtimes/: .gitignore  build.sh
wit/: agent.wit  wasm-af-agent.wit
(+5 files in other folders)
