[workspace]
resolver = "2"
members = [
    "agent-types",
    "agents/web-search",
    "agents/summarizer",
    "agents/url-fetch",
    "agents/router",
    "agents/shell",
    "agents/file-ops",
    "agents/memory",
    "agents/responder",
    "agents/sandbox-exec",
]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
