[workspace]
resolver = "2"
members = [
    "agents/file-ops",
    "agents/url-fetch",
    "agents/web-search",
    "agents/summarizer",
    "agents/router",
    "agents/shell",
    "agents/memory",
    "agents/responder",
    "agents/sandbox-exec",
    "agents/email-send",
    "agents/email-read",
]
