[package]
name = "wasm-af-taskstate"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
bytes = "1"
