[package]
name = "summarizer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default features required — they enable the `macros` feature used by generate!()
wit-bindgen = "0.53"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.component]
package = "wasm-af:agent-summarizer"
