[package]
name = "web-search"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default features required — they enable the `macros` feature used by generate!()
wit-bindgen = "0.53"
# Pre-built WASI 0.2 bindings; provides wasi::http, wasi::io, wasi::clocks, etc.
wasi = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.component]
package = "wasm-af:agent-web-search"
